syntax = "proto3";

message Peer {
    bytes publicKey = 1;
    repeated bytes addrs = 2;
    optional AdditionalData data = 3;
    message AdditionalData {
        string name = 1;
        ServerSettings serverSettings = 2;
        message ServerSettings {
            string name = 1;
            repeated uint32 maps = 2;
            repeated uint32 modes = 3;
            uint32 tickRate = 4;
            repeated int32 champions = 5;
            repeated int32 spells = 6;
        }
        repeated GameInfo gameInfos = 3;
        message GameInfo {
            uint32 id = 1;
            string name = 2;
            uint32 map = 3;
            uint32 mode = 4;
            uint32 players = 5;
            uint32 players_max = 6;
            uint32 features = 7;
            bool passwordProtected = 8;
        }
    }
}
